--- a/tempodeaprender/conteudo/aideiadesimbolo/0.html
+++ b/tempodeaprender/conteudo/aideiadesimbolo/0.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Introdução</title>
     <link rel="stylesheet" href="style/introducao.css" type="text/css">
-    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="../estilo/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
     <script src="../../assets/js/jquery-3.4.1.min.js"></script>
     <script>
@@ -35,7 +35,7 @@
     <div class="container-fluid">
         <div class="row mark">
             <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12 text-center">
-                <h1>Unidade I - 1ª Capacidade: A ideia de síbolo</h1>
+                <h1>Unidade I - 1ª Capacidade: A ideia de símbolo</h1>
             </div>
         </div>
         <div class="row">
