--- a/tempodeaprender/conteudo/introducao/0.html
+++ b/tempodeaprender/conteudo/introducao/0.html
@@ -4,8 +4,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Introdução</title>
-	<link rel="stylesheet" href="style/introducao.css" type="text/css">
-	<link rel="stylesheet" href="../estilo/bootstrap.min.css">
+    <link rel="stylesheet" href="style/introducao.css" type="text/css">
+    <link rel="stylesheet" href="../../assets/bootstrap/css/bootstrap.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Catamaran&display=swap" rel="stylesheet">
 	<script src="../../assets/js/jquery-3.4.1.min.js"></script>
     <script>
