--- a/tempodeaprender/conteudo/aideiadesimbolo/1.html
+++ b/tempodeaprender/conteudo/aideiadesimbolo/1.html
@@ -35,7 +35,7 @@
     <div class="container-fluid">
         <div class="row mark">
             <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12 text-center">
-                <h1>a ideia de síbolo - exemplo</h1>
+                <h1>a ideia de símbolo - exemplo</h1>
             </div>
         </div>
         <div class="row">
