--- a/tempodeaprender/conteudo/introducao/1.html
+++ b/tempodeaprender/conteudo/introducao/1.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<title>Introdução</title>
 	<link rel="stylesheet" href="style/introducao.css" type="text/css">
-    <link rel="stylesheet" href="../../assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../assets/bootstrap/css/bootstrap.min.css" text="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Catamaran&display=swap" rel="stylesheet">
     <script src="../../assets/js/jquery-3.4.1.min.js"></script>
     <link rel="stylesheet" href="../../assets/bootstrap/js/bootstrap.min.js">
