--- a/tempodeaprender/conteudo/introducao/introducao.html
+++ b/tempodeaprender/conteudo/introducao/introducao.html
@@ -4,11 +4,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Introdução</title>
-	<link rel="stylesheet" href="style/introducao.css" type="text/css">
-	<link rel="stylesheet" href="../estilo/bootstrap.min.css">
-	<link href="https://fonts.googleapis.com/css?family=Catamaran&display=swap" rel="stylesheet">
 	<script src="../../assets/js/jquery-3.4.1.min.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=Catamaran&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="../../assets/fontawesome/css/font-awesome.css">
+
+
+	<link rel="stylesheet" href="../../assets/bootstrap/css/bootstrap.min.css">
+	<script src="../../assets/bootstrap/js/bootstrap.min.js"></script>
+
 	<script>
 		setInterval(oculta, 500);
 		function oculta() {
@@ -130,12 +133,17 @@
 			if (parteAtual() < partes[partes.length - 1]) {
 				var proximo = (parteAtual() + 1).toString().concat(".html");
 				document.querySelector('#iframe').src = proximo;
-				var audio = new Audio('../../assets/audio/slide.mp3');
+				var audio = new Audio('../../assets/audio/pop.wav');
 				audio.addEventListener('canplaythrough', function () {
 					audio.play();
 				});
 			} else {
-				window.alert("Você chegou ao fim do documento!");
+				document.querySelector('#aciona').click();
+				var audio = new Audio('../../assets/audio/ohno.wav');
+				audio.addEventListener('canplaythrough', function () {
+					audio.play();
+				});
+				
 			}
 		}
 
@@ -143,7 +151,7 @@
 			if (parteAtual() > partes[0]) {
 				var anterior = (parteAtual() - 1).toString().concat(".html");
 				document.querySelector('#iframe').src = anterior;
-				var audio = new Audio('../../assets/audio/slide.mp3');
+				var audio = new Audio('../../assets/audio/pop.wav');
 				audio.addEventListener('canplaythrough', function () {
 					audio.play();
 				});
@@ -178,6 +186,59 @@
 	<div id="botao-direito" onclick="proximo()"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
 	</div>
 	</div>
+	
+	  <button type="button" id="aciona" style="display: none;" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button>
+	  <!-- Modal -->
+	  <div class="modal fade" id="myModal" role="dialog">
+		<div class="modal-dialog">
+		
+		  <!-- Modal content-->
+		  <div class="modal-content">
+			<div class="modal-header">
+			  <button type="button" class="close" data-dismiss="modal">&times;</button>
+			</div>
+			<div class="modal-body">
+			  <p>Você chegou ao fim do documento!</p>
+			</div>
+			<div class="modal-footer">
+			  <button type="button" class="btn btn-default" data-dismiss="modal">Ok</button>
+			</div>
+		  </div>
+		  </div>
+		</div>
+	
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	
 </body>
 
 </html>
