--- a/tempodeaprender/conteudo/introducao/introducao.html
+++ b/tempodeaprender/conteudo/introducao/introducao.html
@@ -198,7 +198,7 @@
 			  <button type="button" class="close" data-dismiss="modal">&times;</button>
 			</div>
 			<div class="modal-body">
-			  <p>Você chegou ao fim do documento!</p>
+			  <p><strong>OH NO!</strong></br>Você chegou ao fim do documento!</p>
 			</div>
 			<div class="modal-footer">
 			  <button type="button" class="btn btn-default" data-dismiss="modal">Ok</button>
