finalização parcial unidade II

--- a/tempodeaprender/conteudo/formadasletras/1.html
+++ b/tempodeaprender/conteudo/formadasletras/1.html
@@ -293,10 +293,53 @@
                     </ul>
                 </p>
                 <p style="text-indent: 0%; font-weight: bold;">
-                    MODELO:
-                    <img src="" alt="">
+                    MODELO:</br>
+                    <img src="../../atividade/img/deusenir.png" alt="">
                 </p>
-                
+                <p style="text-indent: 0%; font-weight: bold;">
+                    DINÂMICA DO NOME DESENHADO</br>
+                    OBJETIVO:<span style="font-weight: 100;"> estabelecer a interação entre você e os alunos de modo positivo; conhecer o nome de cada um, possibilitando a individualização dentro do coletivo.</span>
+                    MATERIAIS: <span style="font-weight: 100;">papel e lápis de cor</span></br>
+                    PROCEDIMENTOS
+                </p>
+                <p>
+                    <ul>
+                        <li>Grupo em círculo, sentado.</li>
+                        <li>Materiais no meio da sala para uso comum. O papel A4 deve estar cortado ao meio, no sentido vertical.</li>
+                        <li>Peça que cada aluno construa seu nome (ou como gostaria de ser chamado) na tira de papel, de forma criativa e original, de modo que o nome se torne personalizado. </li>
+                        <li>Quando todos terminarem, cada um deve apresentar o seu nome, contar a história dele (quem escolheu, por quê... etc.) e falar como se sente em relação a ele (se gosta, se sente que esse nome lhe pertence, se tem apelidos, se gosta do apelido, se não gosta, como gostaria de ser chamado).</li>
+                    </ul>
+                </p>
+                <p><strong>Socializa&ccedil;&atilde;o</strong> &ndash; compartilhe os pontos que lhe chamaram mais aten&ccedil;&atilde;o. Esta &eacute; uma oportunidade para voc&ecirc; trabalhar os apelidos desagrad&aacute;veis, enfatizando o respeito aos demais, &agrave;s suas prefer&ecirc;ncias, ao modo como quer ser chamado, &agrave; imagem que deseja apresentar etc. Estimule os alunos chamarem seus colegas pelo nome que eles preferirem.  Imprima e cole o alfabeto na parede. (Cada aluno deverá ter uma cópia).</p>
+                <p>
+                    <center><img src="../../atividade/img/alfabeto.png" alt="" width="40%"></center>
+                </p>
+                <p><u><strong>LETRAS M&Oacute;VEIS</strong></u></p>
+
+                <p>As letras de imprensa impressas mai&uacute;sculas devem ser coladas em E.V.A ou em cartolina e distribu&iacute;das aos alunos. Com elas, os alunos poder&atilde;o montar e desmontar palavras, que lhes possibilitar&aacute; uma experi&ecirc;ncia de uma s&eacute;rie de decis&otilde;es relativas &agrave;s propriedades da aprendizagem inicial da escrita.</p>
+                <p>Durante as atividades de &ldquo;desmontar&rdquo; e &ldquo;remontar&rdquo; palavras, os alunos poder&atilde;o observar a <strong>identidade das letras usadas</strong>, a <strong>ordem das mesmas</strong>, as <strong>combina&ccedil;&otilde;es de letras</strong> que s&atilde;o permitidas em nossa l&iacute;ngua, a <strong>ocorr&ecirc;ncia ou n&atilde;o de repeti&ccedil;&otilde;es de letras no interior de cada palavra</strong> etc.</p>
+                <p>Ser&atilde;o momentos preciosos e fundamentais para a continuidade da aprendizagem do sistema de escrita alfab&eacute;tica, em que voc&ecirc; poder&aacute; levantar o debate acerca de todos esses aspectos, indagando os alunos (individualmente ou em grupo) sobre semelhan&ccedil;as e diferen&ccedil;as sonoras que surgem nas palavras.</p>
+                <p><strong>MODELO</strong></p>
+                <p>
+                    <div style="width: 60%; border: 4px dashed orange; margin: auto; font-size: 3rem; padding-top: 0.5rem; padding-bottom: 0.5rem;">
+                        R
+                    </div>
+                </p> 
+                <p><strong>ATIVIDADES QUE PROMOVEM ESPECIFICAMENTE A LEITURA UTILIZANDO NOMES PR&Oacute;PRIOS</strong></p>
+
+                <p> 
+                    <ul style="list-style-type: none;">
+                        <li>
+                        <p>A) Comece dizendo aos alunos: &ldquo;Hoje os ajudantes ser&atilde;o...&rdquo; (levante os dois cart&otilde;es com o nome dos alunos escolhidos), mas n&atilde;o os verbalize. Pode acontecer que os alunos cujos nomes est&atilde;o nos cart&otilde;es ainda n&atilde;o consigam l&ecirc;-los e que os outros alunos que j&aacute; leem os ajudem. Em cada ocasi&atilde;o que voc&ecirc; utilizar o conjunto de cart&otilde;es com os nomes, alguns alunos se encarregar&atilde;o de distribu&iacute;-los aos demais.</p>
+                        </li>
+                        <li>
+                        <p>B) Em outro momento voc&ecirc; espalhar&aacute; os cart&otilde;es na sala de aula, pelo ch&atilde;o, nas carteiras, nas mesas... e pedir&aacute; aos alunos que ao entrarem, cada um dever&aacute; pegar o seu.</p>
+                        </li>
+                        <li>
+                        <p>C) Em outra situa&ccedil;&atilde;o, fa&ccedil;a adivinha&ccedil;&otilde;es: &ldquo;Tenho um cart&atilde;o que tem quatro letras e come&ccedil;a com a letra de Fernando&rdquo;. Qual &eacute;? (Esta atividade servir&aacute; para voc&ecirc; analisar com a classe em que aspectos os nomes se parecem e se diferenciam tanto do ponto de vista qualitativo quanto quantitativo).</p>
+                        </li>
+                    </ul>
+                </p>
             </div>
         </div>
         <div class="ro
