--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Início</title>
+    <style>
+        iframe{
+            display: block;
+            margin: auto;
+        }
+    </style>
 </head>
 <body>
     <ul>
@@ -13,5 +19,6 @@
         <li><a href="https://emanoellucasml.github.io/tempodeaprender">É tempo de aprender</a></li>
         <li><a href="https://emanoellucasml.github.io/arte">Arte</a></li>
     </ul>
+    <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:6598940739340693504" width="60%" height="600px" frameborder="0" allowfullscreen="" title="Publicação incorporada"></iframe>
 </body>
 </html>
