--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li><a href="https://emanoellucasml.github.io/empresa">Empresa</a></li>
         <li><a href="https://emanoellucas.herokuapp.com" target="_blank">Empresa1</a></li>
         <li><a href="https://emanoellucasml.github.io/tempodeaprender">É tempo de aprender</a></li>
-								<li><a href="https://emanoellucasml.github.io/exercicio16.1">É tempo de aprender</a></li>
+								<li><a href="https://emanoellucasml.github.io/exercicio16.1">Exercicio 16.1</a></li>
         <li><a href="https://emanoellucasml.github.io/arte">Arte</a></li>
     </ul>
     <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:6598940739340693504" width="60%" height="600px" frameborder="0" allowfullscreen="" title="Publicação incorporada"></iframe>
