jogo me css feito por fernanda bernardo

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@ werewolf
 human
 </code></pre>
 <p>Nesse exemplo, a variável local tem <em>escopo de função</em>. Variáveis declaradas com a palavra-chave <code>var</code> têm sempre escopo de função, o que significa que elas reconhecem funções como tendo um escopo separado. Essa variável de escopo local é, por isso, inacessível no escopo global.</p>
-<p>As novas palavras-chave<code>let</code> and <code>const</code>, contanto, tem <em>escopo de bloco</em>. Isso significa que um novo escopo local é criado a partir de qualquer tipo de bloco, incluindo blocos de funções, <code>if</code> declerações, e loops <code>for</code> e <code>while</code></p>
+<p>As novas palavras-chave<code>let</code> and <code>const</code>, contudo, tem <em>escopo de bloco</em>. Isso significa que um novo escopo local é criado a partir de qualquer tipo de bloco, incluindo blocos de funções, <code>if</code> declerações, e loops <code>for</code> e <code>while</code></p>
 <p>  Para ilustrar a diferença entre variáveis que têm escopo de bloco e variáveis que têm escopo de função, vamos atribuir uma nova variável em um bloco <code>if</code> usando <code>let</code>.</p>
 <pre class=code-pre><code class="code-highlight language-js hljs"><span class=hljs-keyword>var</span> luaCheia = <span class=hljs-literal>true</span>;
 
