--- a/index1.html
+++ b/index1.html
@@ -21,6 +21,7 @@
         <li><a href="https://emanoellucasml.github.io/arte">Arte</a></li>
 								<li><a href="https://emanoellucasml.github.io/barra">Barra</a></li>
 								<li><a href="https://emanoellucasml.github.io/timberman">Timberman</a></li>
+								<li><a href="https://emanoellucasml.github.io/maquinadeescrever">Efeito máquina de escrever</a></li>
     </ul>
     <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:6598940739340693504" width="60%" height="600px" frameborder="0" allowfullscreen="" title="Publicação incorporada"></iframe>
 </body>
