--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
             font-family: 'Cinzel', serif;
             font-size: 1.3rem;
         }
+        #nome{
+            width: 300px;
+            margin: auto;
+            text-align: center;
+        }
     </style>
     <script>
         let relogio = null
@@ -51,6 +56,9 @@
     <div id="nome-relogio">
     </div>
     <div id="relogio">
+    </div>
+    <div id="nome">
+        Emanoel Lucas Moraes da Luz
     </div>
 </body>
 </html>
