--- a/tempodeaprender/conteudo/aideiadesimbolo/2.html
+++ b/tempodeaprender/conteudo/aideiadesimbolo/2.html
@@ -25,7 +25,7 @@
         }
 
         function DesapareceTexto() {
-            document.querySelector('h2').style.display = 'none';
+            // document.querySelector('h2').style.display = 'none';
             //$('h1').fadeOut(100);
             document.querySelector('.atividade').style.boxShadow = 'none';
         }
@@ -64,7 +64,7 @@
         h2 {
             text-transform: uppercase;
             font-family: 'PT Sans', sans-serif;
-            display: none;
+            /* display: none; */
 
         }
 
