--- a/tempodeaprender/conteudo/unidadepalavra/1.html
+++ b/tempodeaprender/conteudo/unidadepalavra/1.html
@@ -153,7 +153,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12 col-xs-12 col-lg-12 col-md-12 mark text-center">
-                <h3>ATIVIDADES PARA O DESENVOLVIMENTO 2ª CAPACIDADE - DISCRIMINAÇÃO DAS FORMAS DAS LETRAS</h3>
+                <h3>ATIVIDADES PARA O DESENVOLVIMENTO 4ª CAPACIDADE - Consciência da unidade palavra</h3>
             </div>
         </div>
         <div class="row">
