--- a/tempodeaprender/unidade-palavra.html
+++ b/tempodeaprender/unidade-palavra.html
@@ -6,8 +6,12 @@
 		<link rel="stylesheet" href="estilo/introducao.css" type="text/css"/>
 		<link rel="shortcut icon" href="imagem/favicon.ico" />
 		<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+		<script src="assets/js/comum.js"></script>
+		<link rel="stylesheet" href="assets/css/comum.css">
 	</head>
 	<body>
+		<div class="barra-atualizacao">
+		</div>
 		<div class="site">
 			<div class="barrasuperior">
 				<div class="barrasuperiorinterna flex">
